--- a/package.json
+++ b/package.json
@@ -4,13 +4,8 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "helmet": "^3.18.0",
-    "moment": "^2.24.0",
-    "mongodb": "^3.2.6",
-    "mongoose": "^5.5.11"
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {},
   "scripts": {
